static/scss/pages/_blog.scss
$blog-header-height: $header-height;

@import "compass/css3";
@import "util/clearfix";

@mixin avatar ($size) {
  display: block;

  img {
    border: 0;
    width: $size;
    height: $size;
    @include border-radius(3px);
  }
}

.avatar24 {
  @include avatar(24px);
}

.avatar40 {
  @include avatar(40px);
}

.avatar80 {
  @include avatar(80px);
}

a.user {
  font-weight: bold;
  text-decoration: none;
}

.blog-header {
  position: relative;
  display: block;
  @include box-sizing("border-box");
  height: $blog-header-height;
  margin: 0;
  padding: 0.5em #{$blog-header-height + 10};
  text-decoration: none;
  background: $blog-color;

  &:before {
    @extend .fa;
    @extend .fa-arrow-right;
    position: absolute;
    right: 0;
    top: 0;
    width: $blog-header-height;
    height: $blog-header-height;
    text-align: center;
    line-height: $blog-header-height;
    font-size: 1.2em;
    color: #ffffff;
    opacity: 0.75;
    @include transition(opacity 0.25s ease);
  }

  &:hover {
    &:before {
      opacity: 1;
    }
  }

  .avatar40 {
    position: absolute;
    left: 15pt;
    top: 50%;
    margin-top: -20px;
  }

  h1 {
    font-size: 1.2em;
    line-height: 1.2em;
    font-weight: normal;
    margin: 0;
    color: #ffffff;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .user {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: #ffffff;
    opacity: 0.75;
  }

  &.user-info-header {
    &:before {
      @extend .fa-arrow-left;
      right: none;
      left: 7.5pt;
    }
  }
}

.other-blog-view .blog-header {
  background: $other-blog-color;
}

.posts-list {
  margin: 10px;
}

.posts-empty {
  margin: 4em;
  text-align: center;
}

.post {
  border-bottom: solid 1px #f0f0f0;
  margin-bottom: 1em;

  .left {
    float: left;
    width: 40px;
    text-align: center;

    .sharp {
      position: relative;
      z-index: 1;
      display: inline-block;
      margin: .5em;

      a {
        position: relative;
        z-index: 1;
        font-size: 1.8em;
        font-weight: bold;
        color: #b0becc;
        text-decoration: none;
      }

      .post-no {
        position: absolute;
        left: -.75em;
        top: -.75em;
        z-index: 0;
        @include box-sizing("border-box");
        max-width: 2.5em;
        overflow: hidden;
        padding: 0;
        background: #ffffff;

        @include transition(max-width .5s ease, box-shadow .5s ease);

        span {
          display: block;
          margin: .25em;
          padding: 0 1em 0 2em;
          line-height: 1.4em;
          font-size: 1.4em;
          color: #35587c;
        }
      }

      &:hover {
        .post-no {
          max-width: 10em;
          @include box-shadow(0 0 5px rgba(0,0,0,.25));
          @include border-radius(2px);
        }
      }
    }
  }

  .right {
    margin-left: 50px;
  }

  .author {
    display: block;
    margin-right: 8em;
    font-size: 1.2em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    &.rec {
      margin: .25em 0 .5em 0;
      color: #788694;

      .avatar24 {
        float: left;
        margin-right: 0.5em;
      }
    }
  }

  .created {
    display: block;
    float: right;
    width: 10em;
    text-align: right;
    font-size: .9em;
    color: #a0a0a0;
  }

  .tags {
    position: relative;
    margin: .25em 0;
    padding-left: 1.8em;

    &:before {
      @extend .fa;
      @extend .fa-tags;
    }

    &:before {
      position: absolute;
      left: 0;
      top: .1em;
      font-size: 1.2em;
      color: #35587c;
    }

    a {
      text-decoration: none;

      &:after {
        content: ',';
        margin-right: 0.5em;
      }

      &:last-child:after {
        content: none;
      }
    }
  }

  .text {
    margin: .5em 0;

    &.rec {
      margin-bottom: 1em;
    }

    p {
      margin-bottom: .25em;
    }
  }

  blockquote {
    margin: 1em 2em 1em 0;
  }

  .postimg {
    position: relative;
    display: block;
    float: left;
    clear: both;
    margin: .5em .5em .5em 0;
    width: 100%;
    max-width: 400px;

    img {
      max-width: 100%;
      max-height: 300px;
    }
  }

  .actions {
    margin: 1em 0;
    opacity: .5;
    @include transition(opacity .25s);

    a {
      display: inline-block;
      text-decoration: none;
      margin: .5em 1.5em .5em 0;
      white-space: nowrap;

      i {
        @extend .fa;
      }

      &:hover {
        color: inherit;
      }

      &:before {
        font-size: 1.2em;
      }
    }

    .reply i {
      @extend .fa-comments-o;
    }

    .recommend i {
      @extend .fa-share;
    }

    .bookmark i {
      @extend .fa-star;
    }

    .subscribe i {
      @extend .fa-check;
    }

    .delete {
      float: right;
      margin: .5em 0;
      i {
        @extend .fa-close;
      }
    }

    .recommend, .bookmark, .subscribe, .delete {
      i {
        color: lighten(#35587c, 50%);
      }

      &.done {
        i {
          color: #35587c;
        }
      }
    }

    .number {
      margin-left: .25em;
    }

    .label {
      display: none;
      margin: 0 0 0 .5em;
    }

    @include respond-to(360pt) {
      .reply, .recommend {
        .label {
          display: inline;
        }

        .number {
          margin-left: 0;
          &:before {
            content: '|';
            margin: 0 .25em;
          }

          &:empty:before {
            content: none;
            margin: 0;
          }
        }
      }
    }

    @include respond-to(480pt) {
      .bookmark, .subscribe {
        .label {
          display: inline;
        }
      }
    }

    @include respond-to(640pt) {
      .label {
        display: inline;
      }
    }
  }

  &:hover {
    .actions {
      opacity: 1;
    }
  }
}



.blog-view {
  .more-posts {
    color: $blog-color;
  }
}

.other-blog-view {
  .more-posts {
    color: $other-blog-color;
  }
}

